Added custom cell to storyboard Set auto layout constraints

--- a/MusicVideoApp/Base.lproj/Main.storyboard
+++ b/MusicVideoApp/Base.lproj/Main.storyboard
@@ -3,40 +3,65 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Music VideoTVC-->
         <scene sceneID="qU4-bU-7ol">
             <objects>
                 <tableViewController id="1VI-qB-eaf" customClass="MusicVideoTVC" customModule="MusicVideoApp" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="33o-lE-cSn">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="132" sectionHeaderHeight="28" sectionFooterHeight="28" id="33o-lE-cSn">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" textLabel="I8l-rR-esX" detailTextLabel="hu7-Fs-UYq" style="IBUITableViewCellStyleSubtitle" id="Fsy-Yi-l62">
-                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="132" id="Fsy-Yi-l62" customClass="MusicVideoTableViewCell" customModule="MusicVideoApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="132"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Fsy-Yi-l62" id="E9H-bJ-TkR">
-                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="132"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="I8l-rR-esX">
-                                            <rect key="frame" x="15" y="6" width="31.5" height="19.5"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UGa-gy-zmT">
+                                            <rect key="frame" x="8" y="8" width="192" height="116"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="192" id="JY2-uQ-Ntf"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="rank" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cYX-yX-2Gy">
+                                            <rect key="frame" x="208" y="8" width="32" height="21"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="21" id="HKZ-ad-Lw4"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="hu7-Fs-UYq">
-                                            <rect key="frame" x="15" y="25.5" width="40.5" height="13.5"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="musicTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cgr-KK-VzY">
+                                            <rect key="frame" x="208" y="37" width="384" height="87"/>
+                                            <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                    <constraints>
+                                        <constraint firstItem="UGa-gy-zmT" firstAttribute="top" secondItem="E9H-bJ-TkR" secondAttribute="topMargin" id="0mI-1N-aqO"/>
+                                        <constraint firstItem="UGa-gy-zmT" firstAttribute="leading" secondItem="E9H-bJ-TkR" secondAttribute="leadingMargin" id="4pB-QV-7lM"/>
+                                        <constraint firstItem="cgr-KK-VzY" firstAttribute="trailing" secondItem="E9H-bJ-TkR" secondAttribute="trailingMargin" id="AvV-zb-V5P"/>
+                                        <constraint firstItem="cYX-yX-2Gy" firstAttribute="leading" secondItem="cgr-KK-VzY" secondAttribute="leading" id="EmJ-fX-eve"/>
+                                        <constraint firstItem="cgr-KK-VzY" firstAttribute="top" secondItem="cYX-yX-2Gy" secondAttribute="bottom" constant="8" symbolic="YES" id="UgX-1s-AVP"/>
+                                        <constraint firstItem="cYX-yX-2Gy" firstAttribute="leading" secondItem="UGa-gy-zmT" secondAttribute="trailing" constant="8" symbolic="YES" id="hJb-yk-05Z"/>
+                                        <constraint firstItem="UGa-gy-zmT" firstAttribute="bottom" secondItem="cgr-KK-VzY" secondAttribute="bottom" id="veG-Bh-RbX"/>
+                                        <constraint firstItem="UGa-gy-zmT" firstAttribute="centerY" secondItem="E9H-bJ-TkR" secondAttribute="centerY" id="z9B-6d-LTB"/>
+                                        <constraint firstItem="UGa-gy-zmT" firstAttribute="top" secondItem="cYX-yX-2Gy" secondAttribute="top" id="zGO-tk-7Db"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="musicVideoImage" destination="UGa-gy-zmT" id="Ad6-Gr-61G"/>
+                                    <outlet property="musicVideoRank" destination="cYX-yX-2Gy" id="h7V-O4-XZ4"/>
+                                    <outlet property="musicVideoTitle" destination="cgr-KK-VzY" id="SOm-M8-LD1"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -60,7 +85,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
-                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="GbG-Fk-XzY">
+                    <toolbar key="toolbar" opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" barStyle="black" id="GbG-Fk-XzY">
                         <rect key="frame" x="0.0" y="556" width="600" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </toolbar>
